Revise thank you message in vendor matching response
Updated the success message and next steps for vendor matching requests.

--- a/vendor-finder/index.html
+++ b/vendor-finder/index.html
@@ -881,14 +881,16 @@
                     <p class="subtitle">Your vendor matching request has been submitted successfully.</p>
 
                     <div class="success-details">
-                        <p>We've received your requirements and will analyze them to identify the best-matching IDP software vendors. You'll receive within 1-2 business days:</p>
+                        <p>Your requirements are now under review.</p>
+                        
+                        <p><strong>What happens next:</strong></p>
                         <ul>
-                            <li>A detailed vendor comparison report based on your specific requirements</li>
-                            <li>Capability matching scores for each recommended vendor</li>
-                            <li>Links to detailed vendor profiles on idp-software.com</li>
-                            <li>Additional resources to support your evaluation process</li>
+                            <li>A consultant will personally review your tender analysis requirements</li>
+                            <li>Within 48 hours, you'll receive either clarifying questions or a in depth suggestions.</li>
+                            <li>Based on your needs, the consultant will provide relevant resources and a preliminary assessment</li>
                         </ul>
-                        <p>Check your email for a confirmation message with your requirements summary.</p>
+                        
+                        <p>Check your email within the next 48 hours for personalized contact.</p>
                     </div>
 
                     <div class="success-actions">
